--- a/inst/rmarkdown/templates/pfgsea/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/pfgsea/skeleton/skeleton.Rmd
@@ -5,8 +5,7 @@ date: "`r Sys.Date()`"
 bibliography: bibliography.bib
 params:
   # Using DESeqAnalysis S4 object as input.
-  # object_file: "data/YYYY-MM-DD/object.rds"
-  object_file: "~/MCF7_analysis.rds"
+  object_file: "data/YYYY-MM-DD/object.rds"
   # MSigDb GMT files downloaded from the Broad Institute.
   # Email registration is required for these files.
   gmt_dir: "~/msigdb/msigdb_v6.2_GMTs"
