--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
-## pfgsea 0.0.5 (2019-02-01)
+## pfgsea 0.0.5 (2019-02-04)
 
+### Major changes
+
+- Now exporting `FGSEAList` and `RankedList` S4 classes.
+- Reworked `plotEnrichment()`, `plotGSEATable()`, and `topTables()` to use
+  `FGSEAList` object.
+- Renamed `statsList()` to `rankedList()`, and switched to S4 method approach.
+- Updated R Markdown template to reflect these function reworkings.
 
 ## pfgsea 0.0.4 (2019-01-15)
 
