--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+## pfgsea 0.0.6 (2019-03-11)
+
+### Minor changes
+
+- Improved parameterized object passthrough in R Markdown template.
+
+
+
 ## pfgsea 0.0.5 (2019-02-04)
 
 ### Major changes
@@ -8,13 +16,43 @@
 - Renamed `statsList()` to `RankedList()`, and switched to S4 method approach.
 - Updated R Markdown template to reflect these function reworkings.
 
+
+
 ## pfgsea 0.0.4 (2019-01-15)
+
+### Minor changes
+
+- Documentation fixes and other code cleanup to pass lintr checks.
+
 
 
 ## pfgsea 0.0.3 (2018-12-17)
 
+### New functions
+
+- statsList: Return preranked GSEA stats list.
+
+### Major changes
+
+- Added FGSEA R Markdown template.
+
+
 
 ## pfgsea 0.0.2 (2018-12-14)
 
+### Major changes
+
+- Switched to using goalie for assert checks instead of assertive.
+
+### Minor changes
+
+- Added README.
+- Set up lintr checks.
+- Set up pkgdown website.
+- Miscellaneous documentation improvements.
+
+
 
 ## pfgsea 0.0.1 (2018-11-26)
+
+Initial release.
