--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+## pfgsea 0.1.1 (2019-04-01)
+
+### Minor changes
+
+- NAMESPACE updates to reflect changes in [basejump][] package.
+- Now importing `theme_paperwhite` from [minimalism][] package.
+
+
+
 ## pfgsea 0.1.0 (2019-03-23)
 
 - Initial stable release.
@@ -76,3 +85,5 @@ Initial release.
 
 
 [Acid Genomics]: https://acidgenomics.com/
+[basejump]: https://basejump.acidgenomics.com/
+[minimalism]: https://minimalism.acidgenomics.com/
