--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+## pfgsea 0.1.3 (2019-04-17)
+
+### Minor changes
+
+- Updated Travis CI configuration to use `rnaseq` Docker image.
+- Miscellaneous documentation improvements.
+
+
+
 ## pfgsea 0.1.2 (2019-04-10)
 
 ### Major changes
