--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+## pfgsea 0.1.5 (2019-04-25)
+
+### Minor changes
+
+- S4 generic reexport documentation fixes.
+
+
+
 ## pfgsea 0.1.4 (2019-04-23)
 
 ### Minor changes
