--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+## pfgsea 0.1.6 (2019-04-29)
+
+### New functions
+
+- `pathwayNames`, `contrastNames`: Accessor functions for pathway (e.g. MSigDb)
+  and differential expression contrast names.
+- `enriched` method support for FGSEAList class. Useful for returning a list
+  directionally significant pathways, per contrast. Primarily intended for use
+  at the moment with `plotEnrichedUpset`.
+- `plotEnrichedUpset`: Utility function that makes it easy to compare enrichment
+  groups across contrasts, via an UpSet plot.
+
+
+
 ## pfgsea 0.1.5 (2019-04-25)
 
 ### Minor changes
